# solidcolorx-support

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/contact/: page.tsx
src/app/download/: page.tsx
src/app/faq/: page.tsx
src/app/features/: page.tsx
src/app/guide/: page.tsx
src/components/: Footer.tsx  Header.tsx
