[package]
name = "solidcolorx-support"
version = "0.1.0"
description = "SolidColorX Support Application"
authors = ["you"]
edition = "2021"

[lib]
name = "solidcolorx_support_lib"
crate-type = ["cdylib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
